# container_mngr

./: .pre-commit-config.yaml  CHANGELOG.md  Makefile  Pipfile  README.md  pyproject.toml
.github/workflows/: bump-version.yaml  lint-test.yaml  publish-package.yaml  run-tests.yaml  workflows.yaml
src/container_mngr/: __main__.py  app.py  container_mngr_app.css
src/container_mngr/components/: __init__.py  containers.py  images.py  runtime.py  screens.py  table_wrapper.py
src/container_mngr/data/: docker.py  errors.py  models.py
tests/: test_docker.py
tests/components/: test_images.py  test_images_table_data_provider.py  test_table_wrapper.py
